force-app/main/default/objects/C360_ExportPlan__c.object
<CustomObject>
    <fields>
        <fullName>AccruedExpense__c</fullName>
        <label>Accrued Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AmountTHB__c</fullName>
        <label>Amount (THB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BookingNumber__c</fullName>
        <label>Booking Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Booking__c</fullName>
        <label>Booking</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CarryOver__c</fullName>
        <label>Carry Over</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerCode__c</fullName>
        <label>Customer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerName__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customs__c</fullName>
        <label>Customs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DONumber__c</fullName>
        <label>DO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DeliveryNumber__c</fullName>
        <label>Delivery Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DestinationCountry__c</fullName>
        <label>Destination Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination__c</fullName>
        <label>Destination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DischagePort__c</fullName>
        <label>Discharge Port</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ETA__c</fullName>
        <label>ETA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ETD__c</fullName>
        <label>ETD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExchangeRate__c</fullName>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExportPlanKey__c</fullName>
        <externalId>true</externalId>
        <label>Export Plan Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FBCharge__c</fullName>
        <label>FB Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FOBAmountUSD__c</fullName>
        <label>FOB Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FOBAmount__c</fullName>
        <label>FOB Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FXRate__c</fullName>
        <label>FX Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feeder__c</fullName>
        <label>Feeder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FlagDelete__c</fullName>
        <label>Flag Delete</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FreightCost__c</fullName>
        <label>Freight Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FreightForwarder__c</fullName>
        <label>Freight Forwarder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FreightRate__c</fullName>
        <label>Freight Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Freight__c</fullName>
        <label>Freight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GSAPInvoice__c</fullName>
        <label>SAP Invoice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incoterms__c</fullName>
        <label>Incoterms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvoiceExpenseNumberCost__c</fullName>
        <label>Invoice Expense Number and Cost</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvoiceNumber__c</fullName>
        <label>Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <label>Item</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LoadDate__c</fullName>
        <label>Load Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MaterialCode__c</fullName>
        <label>Material Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MonthlyExpense__c</fullName>
        <label>Monthly Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NWUnit__c</fullName>
        <label>NW Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NW__c</fullName>
        <label>NW (KGS/LTS)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OtherCost__c</fullName>
        <label>Other Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PI__c</fullName>
        <label>PI</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PONumber__c</fullName>
        <label>PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaidAmount__c</fullName>
        <label>Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PaidDate__c</fullName>
        <label>Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <label>Payment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PricePerUnit__c</fullName>
        <label>Price Per Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductGroup__c</fullName>
        <label>Product Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductList__c</fullName>
        <description>รายการสินค้า</description>
        <inlineHelpText>รายการสินค้า</inlineHelpText>
        <label>Product List</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QuantityUnit__c</fullName>
        <label>Quantity Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReferenceDocumentNumber__c</fullName>
        <description>SO/PO/INDENT Number</description>
        <inlineHelpText>SO/PO/INDENT Number</inlineHelpText>
        <label>Reference Document Number (14 Digits)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ReferenceSubmissionNumber__c</fullName>
        <description>หมายเลขอ้างอิงการบันทึกแบบ (10 หลัก)</description>
        <inlineHelpText>หมายเลขอ้างอิงการบันทึกแบบ (10 หลัก)</inlineHelpText>
        <label>Reference Submission Number (10 Digits)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remark__c</fullName>
        <label>Remark</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RequestForm__c</fullName>
        <label>Request Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAKC__c</fullName>
        <label>SAKC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SONumber__c</fullName>
        <label>SO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOPOINDENTNO__c</fullName>
        <label>SO, PO, INDENT NO.</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_PO_INDENT_NO__c</fullName>
        <label>SO, PO, INDENT NO.</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentCost__c</fullName>
        <label>Shipment Cost</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentNumber__c</fullName>
        <label>Shipment Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping__c</fullName>
        <label>Shipping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubmissionDate__c</fullName>
        <description>วันที่การยื่นแบบ</description>
        <inlineHelpText>วันที่การยื่นแบบ</inlineHelpText>
        <label>Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SubmissionNumber__c</fullName>
        <description>เลขทะเบียนรับแบบ (14 หลัก)</description>
        <inlineHelpText>เลขทะเบียนรับแบบ (14 หลัก)</inlineHelpText>
        <label>Submission Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SurveyFee__c</fullName>
        <label>Survey Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Terminal__c</fullName>
        <label>Terminal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalAmount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalExpense__c</fullName>
        <label>Total Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VolumeMT__c</fullName>
        <label>Volume (MT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Export Plan</label>
    <nameField>
        <displayFormat>EXP{0000000}</displayFormat>
        <label>Plan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>